k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${POD_NAME}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: ${POD_NAME}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ${POD_NAME}
    spec:
      containers:
        - name: ${POD_NAME}
          image: ${GAR_LOCATION}-docker.pkg.dev/${PROJECT_ID}/${REPOSITORY}/${IMAGE}:${TAG}
          ports:
            - containerPort: 80
      restartPolicy: Always
