k8s/k8s.yaml
---
# Web app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoramento-realtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoramento-realtime
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: monitoramento-realtime
    spec:
      containers:
        - name: monitoramento-realtime
          image: gcr.io/PROJECT_ID/IMAGE_APP:TAG
          ports:
            - containerPort: 80
      restartPolicy: Always

---
# Web app service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitoramento-realtime
  name: monitoramento-realtime
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: monitoramento-realtime

---
# Web app Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoramento-realtime-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - monitoramento-realtime.mobilidade.rio
      secretName: monitoramento-realtime-tls
  rules:
    - host: monitoramento-realtime.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilidade-app
                port:
                  number: 80

---
